HMS.API/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: health-med-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: myapp.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: health-med-service
            port:
              number: 80
